# libTxHPCG

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config-cmake.h.in  external_repos.sh  index.html  params.json
cmake/modules/: FindCuGelus.cmake
include/: Backend.hpp  BackendFactory.hpp  BackendRegistry.hpp  CMakeLists.txt  CPCSR.hpp  ComputeDotProduct.hpp  ComputeMG.hpp  ComputeProlongation.hpp  ComputeRestriction.hpp  ComputeSPMV.hpp  ComputeSYMGS.hpp  ComputeWAXPBY.hpp  ExchangeHalo.hpp  MatrixOptimizationDataTx.hpp  TxMatrixOptimizationDataBase.hpp  TxVectorOptimizationDataBase.hpp  VectorOptimizationDataTx.hpp
include/CU/: CMakeLists.txt  MatrixOptimizationDataTx.hpp  TxMatrixOptimizationDataCU.hpp  TxVectorOptimizationDataCU.hpp  VectorOptimizationDataTx.hpp  chkcudaerror.hpp
src/: BackendFactory.cpp  BackendRegistry.cpp  CMakeLists.txt  ComputeDotProduct.cpp  ComputeMG.cpp  ComputeProlongation.cpp  ComputeRestriction.cpp  ComputeSPMV.cpp  ComputeSYMGS.cpp  ComputeWAXPBY.cpp  ExchangeHalo.cpp  KernelWrappers.h  Kernels.cu  MatrixOptimizationDataTx.cpp  OptimizeProblem.cpp  TxVectorOptimizationDataBase.cpp  VectorOptimizationDataTx.cpp
src/CU/: CMakeLists.txt  CPCSR.cpp  CUBackendRegistration.cpp  ComputeDotProduct.cpp  ExchangeHalo.cpp  Kernels.cu  MatrixOptimizationDataTx.cpp  TxMatrixOptimizationDataCU.cpp  TxVectorOptimizationDataCU.cpp  VectorOptimizationDataTx.cpp
tests/: CMakeLists.txt  HPCGFixture.cpp  HPCGFixture.hpp  MPIFixture.cpp  MPIFixture.hpp  testUtils.cpp  testUtils.hpp  test_BackendRegistry.cpp  test_ComputeDotProduct.cpp  test_ComputeMG.cpp  test_ComputeProlongation.cpp  test_ComputeRestriction.cpp  test_ComputeSYMGS.cpp  test_HPCGFixture.cpp  test_MPI.cpp  test_MPIFixture.cpp  test_TestUtils.cpp  test_TxMatrixOptimizationDataBase.cpp
tests/CU/: CMakeLists.txt  testUtilsCU.cpp  testUtilsCU.hpp  test_CPCSR.cpp  test_ComputeProlongation.cpp  test_ComputeRestriction.cpp  test_ComputeSPMV.cpp  test_ComputeWAXPBY.cpp
utils/: config-ivy.sh  config-titan.sh
