include_directories(${CMAKE_CURRENT_SOURCE_DIR})
set(TxHPCG_SOURCES
    BackendFactory.cpp
    BackendRegistry.cpp
    ComputeMG.cpp
    ComputeProlongation.cpp
    ComputeRestriction.cpp
    ComputeSPMV.cpp
    ComputeSYMGS.cpp
    ComputeWAXPBY.cpp
    OptimizeProblem.cpp
    TxVectorOptimizationDataBase.cpp
    ${HPCG_SOURCE_DIR}/GenerateCoarseProblem.cpp
    )
add_library(TxHPCG
    ${TxHPCG_SOURCES}
    )
if(BUILD_CU_TXHPCG)
  add_subdirectory(CU)
endif()
if(BUILD_OCL_TXHPCG)
  add_subdirectory(OCL)
endif()
install(TARGETS TxHPCG DESTINATION lib)
